--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,20 +1,32 @@
-header {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
+body {
+    font-family: 'VT323', monospace;
+    background-color: #000000;
+    color: #00FF00;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
+
+a {
+    color: #00FF00;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+header, footer {
     padding: 1rem 0;
+}
+
+header {
+    border-bottom: 1px solid #808080;
 }
 
 footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
+    border-top: 1px solid #808080;
     position: absolute;
     bottom: 0;
     width: 100%;
-}
-
-main {
-    padding: 2rem;
 }
