--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,32 +1,34 @@
-body {
-    font-family: 'VT323', monospace !important;
-    background-color: #000000 !important;
-    color: #00FF00 !important;
-    height: 100vh !important;
-    margin: 0 !important;
-    overflow: hidden !important;
+.App {
+    height: 100vh;
+    background-color: #000000;
+    color: #00FF00;
+    font-family: 'VT323', monospace;
+    margin: 0;
+    overflow: hidden;
+    position: relative; /* To position the footer at the bottom */
 }
 
-a {
-    color: #00FF00 !important;
-    text-decoration: none !important;
+.App a {
+    color: #00FF00;
+    text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline !important;
+.App a:hover {
+    text-decoration: underline;
 }
 
-header, footer {
-    padding: 1rem 0 !important;
+.App header,
+.App footer {
+    padding: 1rem 0;
 }
 
-header {
-    border-bottom: 1px solid #808080 !important;
+.App header {
+    border-bottom: 1px solid #808080;
 }
 
-footer {
-    border-top: 1px solid #808080 !important;
-    position: absolute !important;
-    bottom: 0 !important;
-    width: 100% !important;
+.App footer {
+    border-top: 1px solid #808080;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
